--- a/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
+++ b/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
@@ -21,14 +21,14 @@ A poll \cite{CRISPDMPopular2020} conducted among visitors of a data science proj
 \begin{figure}[ht]
 	\centering
 	\includegraphics[height=10cm]{Bilder/Research_Model.png}
-	\caption[Adjusted CRISP-DM Model]{Adjusted CRISP-DM Model, based on \cite{CRISPDM2000}}
+	\caption[Adjusted CRISP-DM Model]{Adjusted CRISP-DM Model, based on \cite[p.~13]{CRISPDM2000}}
 	\label{fig:CRISM-DM}
 \end{figure}
 
 Being the most popular model, \ac{CRISP-DM} is not necessarily always the best fit for all data science projects. In the case of this particular research effort, \ac{CRISP-DM} proved the best suit for several reasons.
 Firstly, the process model follows the natural intuition of project design for data science tasks. Evaluation has to occur before the deployment, the modeling needs to occur before the evaluation, the preparation needs to occur before the modeling, and an adequate understanding of business and data aspects has to be developed in the beginning of the process. All those elementary dependencies are reflected in the model.
-Secondly, the \ac{CRISP-DM} model addresses the iterative nature of data mining. Fundamentally, the model is of circular nature, reflecting the fact that data science projects require continuous improvement. After the deployment of one solution, monitoring can give insights which allow for deeper business understanding, triggering the start of a new circuit of the model. Another model which puts forward an iterative approach is \ac{KDD} \cite{KDD}.
-Thirdly, the model allows to adapt the order of its phases. The free choice of path is more favorable compared to \ac{KDD}, which allows for loops, but has a fixed order \cite{KDD}.
+Secondly, the \ac{CRISP-DM} model addresses the iterative nature of data mining. Fundamentally, the model is of circular nature, reflecting the fact that data science projects require continuous improvement. After the deployment of one solution, monitoring can give insights which allow for deeper business understanding, triggering the start of a new circuit of the model. Another model which puts forward an iterative approach is \ac{KDD} \cite[p.~41]{KDD}.
+Thirdly, the model allows to adapt the order of its phases. The free choice of path is more favorable compared to \ac{KDD}, which allows for loops, but has a fixed order \cite[p.~42]{KDD}.
 Fourth, \ac{CRISP-DM} has no special requirements regarding team size or roles. Instead, a \ac{CRISP-DM} project can be completed by only one person. This stands in contrast to SCRUM, which needs different roles represented by people in the team to work effectively \cite{SCRUMSolo}. 
 Fifth, the \ac{CRISP-DM} model was publicized in the context of a 70-page guide with generic task descriptions and outputs for each phase. The detailed guide is especially valuable for teams with little experience.
 
