--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -273,7 +273,6 @@ The following benchmark of different indexing method shows the performance dispa
 \begin{figure}[h!]
 	%\left
 	\includegraphics[height=15cm]{Bilder/appendix/dfvsdict.png}
-	\label{benchmarkDF}
 \end{figure}
 \begin{lstlisting}[caption={Benchmark of Indexing with Python Data Structures}]
 \end{lstlisting}
@@ -305,7 +304,7 @@ The following \lstinline|DataFrame| shows the \ac{TF-IDF} representation of the 
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[height=6cm]{Bilder/preprocessing/tfidf.png}
+	\includegraphics[width=\textwidth]{Bilder/preprocessing/tfidf.png}
 	\label{fig:tfidf}
 	\caption{Features extracted with TF-IDF}
 \end{figure}
