--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -9,7 +9,7 @@ The business objective is the development of a solution for the automatic aggreg
 An initial look a the data has shown that each invoice item can easily contain more than 100 pieces of information, which can be considered as attributed in the dataset. The part of the data that is of interest for the research is the description and payment data. Other data needs to be retained for a coherent and informative presentation of the results, such as location information and information on seller and buyer.
 
 \paragraph{Insertion of Data}
-The insertion of data is concerned with the theoretical utilization of the data and problems arising during this process. The encoding and grouping of free text items is referenced as one concern in the \ac{CRISP-DM} user guide \cite[p.~38]{CRISPDM2000}. In this research the focus is on free text items, therefore this step will be discussed in detail in the following chapter. 
+The insertion of data is concerned with the theoretical utilization of the data and problems arising during this process. The encoding and grouping of free text items is referenced as one concern in the \ac{CRISP-DM} user guide \cite[p.~44]{CRISPDM2000}. In this research the focus is on free text items, therefore this step will be discussed in detail in the following chapter. 
 Other concerns are missing attributes. The dataset has already undergone a surface-level evaluation, which concludes that all relevant attributes are contained.
 
 \section{Data Description}
@@ -40,7 +40,7 @@ The descriptions of invoice items vary greatly in their length. While the larges
 	\centering
 	\includegraphics[height=6cm]{Bilder/hist_description.pdf}
 	\caption{Histogram of Description Length}
-	\label{fig:languages-bar}
+	\label{fig:descr-length}
 \end{figure}
 
 \begin{figure}[!h]
