--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -19,7 +19,7 @@
 			Value        & Relevant specific business                                                                           & Of general relevance                                                                                   \\ \midrule
 			
 			Availability & \begin{tabular}[c]{@{}l@{}}Authorization processes in place,\\ data protection measures\end{tabular} & Ubiquitously available                                                                                 \\ \midrule
-			Examples     & \begin{tabular}[c]{@{}l@{}}Sales records, usage statistics, \\ customer feedback\end{tabular}        & \begin{tabular}[c]{@{}l@{}}Historic weather information, \\ consumer statistics, social media data\end{tabular}\\
+			Examples     & \begin{tabular}[c]{@{}l@{}}Sales records, usage statistics, \\ customer feedback\end{tabular}        & \begin{tabular}[c]{@{}l@{}}Historic weather information, con- \\  sumer statistics, social media data\end{tabular}\\
 			\bottomrule
 		\end{tabular}
 	\end{table}
@@ -57,9 +57,9 @@
 	\end{tabular}
 \end{table}
 
-	The problem-first project type is characterized by a predefined problem statement or research goal. The underlying question is how a specific problem can be solved \cite{dataScienceProjectTypes}.  For the selection of the dataset, this requires that goal achievement can be measured with existing ground truth. In some cases, also other methods such as expert judgments can be sufficient. In a problem-first project different datasets can and should be considered. \cite{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence.
+	The problem-first project type is characterized by a predefined problem statement or research goal. The underlying question is how a specific problem can be solved \cite[p.~3051]{dataScienceProjectTypes}.  For the selection of the dataset, this requires that goal achievement can be measured with existing ground truth. In some cases, also other methods such as expert judgments can be sufficient. In a problem-first project different datasets can and should be considered. \cite[p.~3051]{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence.
 	
-	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and problem to solve is not known.
+	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite[p.~3051]{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and problem to solve is not known.
 	
 	\subsection{Systematization of this Project}
 	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. The goal of the analysis is clearly stated in before chapters. Still, the research questions (\ref{section:research-q}) aim at finding out which insights the analysis can give. Therefore, this project can be classified as a data-first project.
