--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -7,7 +7,7 @@ In general, internal financial reporting aims to provide information about the h
 
 \section{Current Situation}
 An essential part of economic counseling is the assessment of spending for different company segments. Spending of a firm usually is written down in invoice documents, which have to be grouped  to analyze cost types.
-The global market is estimated to comprise 550 billion invoices annually, but 90\% are exchanged paper-based \cite{kochEInvoicingJourney}. With modern technology, these paper-based or digital documents can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data \cite{structuredAndUnstructuredData}. Companies can not utilize unstructured data to its full potential, as this data is not able to be leveraged with traditional data analysis tools.
+The global market is estimated to comprise 550 billion invoices annually, but 90\% are exchanged paper-based \cite[p.~5]{kochEInvoicingJourney}. With modern technology, these paper-based or digital documents can be transformed into a structured or semi-structured format. According to expert estimates, unstructured data makes up for more than 80\% of enterprise data \cite{structuredAndUnstructuredData}. Companies can not utilize unstructured data to its full potential, as this data is not able to be leveraged with traditional data analysis tools.
 
 \section{Research Questions}
 \label{section:research-q}
