--- a/Inhalt/04_Inhalt/content_data_preparation.tex
+++ b/Inhalt/04_Inhalt/content_data_preparation.tex
@@ -127,9 +127,9 @@
 	
 	
 	One question that may now arise is: Why doesn't Python split up the workload and employ the full capacity of the machine?
-	This can be explained with the design of the Python interpreter. The Global Interpreter Lock controls access to the Python Virtual Machine executing the code. This lock only allows exactly one thread to run at a time \cite{corePython}. This of course is not favorable, as valuable CPU capacity is idle. Fortunately, the lock behaves in a special way regarding C routines: the lock is released before executing C code \cite{corePython}. I/O operations in Python, such as opening files, utilize C code. This allows to bypass the, in this case, inconvenient locking mechanism. 
+	This can be explained with the design of the Python interpreter. The Global Interpreter Lock controls access to the Python Virtual Machine executing the code. This lock only allows exactly one thread to run at a time \cite[ch.~18.3.1]{corePython}. This of course is not favorable, as valuable CPU capacity is idle. Fortunately, the lock behaves in a special way regarding C routines: the lock is released before executing C code \cite[ch.~18.3.1]{corePython}. I/O operations in Python, such as opening files, utilize C code. This allows to bypass the, in this case, inconvenient locking mechanism. 
 	
-	Different Python libraries exploit this specialty and allow to spawn a pool of different processes, which then execute calls asynchronously. One example is the \lstinline|ProcessPoolExecutor|. A notable restriction is that only picklable objects can be submitted for multiprocessing. This concerns both function and its parameters. While this is not a problem in this task, this restriction will become important later on in the section about feature extraction.
+	Different Python libraries exploit this specialty and allow to spawn a pool of different processes, which then execute calls asynchronously. The \lstinline|ProcessPoolExecutor| is one example of multiprocessing.
 	
 \begin{lstlisting}[language=python, 
 label=code:process-pool,
@@ -181,7 +181,7 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
             	\centering
             	 \includegraphics[height=3.5cm]{Bilder/corpus_bow.png}
             	\caption{Example Corpus}
-            	\label{fig:corpus}
+            	\label{fig:term-doc-incidence}
             \end{figure}
             The three documents in Figure \ref{fig:corpus} will be considered to explain the workings of the one-hot encoding. A corpus is transformed into a term-document incidence matrix representation in two steps. 
             
@@ -201,15 +201,15 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
             \[ d_{3} = [0,0,0,1,0,0,0,1]\]
     		The drawback of this method is that no consideration is paid to words being repeated in one document. Additionally, no semantic relationship between words or documents can be inferred. 
     		Further, it can be stated, that the \ac{BoW} representation fails to capture the meaning of synonyms. This becomes obvious with an example: document $ d_{1} $ and $ d_{3}$ would be considered to belong into the topic of transportation or automotive. The \ac{BoW} representation suggests topical proximity between document $ d_{2} $ and $ d_{3}$ , through the shared word "ticket". "Ticket" here is used in both the meaning of an entrance pass ($d_{2}$) and in the meaning of a note for a traffic offense  ($d_{3}$). 
-    		Further, this feature extraction method strongly suffers from high dimensionality \cite{practicalNLP}, since the matrix dimensions depend on the size of the vocabulary. 
+    		Further, this feature extraction method strongly suffers from high dimensionality \cite[ch.~3.2]{practicalNLP}, since the matrix dimensions depend on the size of the vocabulary. 
     
             \subsubsection{Bag of Words Model}
  			With the \ac{BoW} model, the only difference to a term-document incidence matrix is that the occurrences of a word are counted, instead of a binary encoding.
              \begin{figure}[ht]
             	\centering
-            	\includegraphics[height=2.9cm]{Bilder/bow.png}
+            	\includegraphics[width=\textwidth]{Bilder/bow.png}
             	\caption{\acl{BoW} Representation of Documents}
-            	\label{fig:corpus}
+            	\label{fig:bag-of-words}
             \end{figure}
             
             The result of vectorization are three vectors:
@@ -253,14 +253,14 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
             The \ac{TF-IDF} measure corrects some of the pitfalls of the \ac{BoW} model. It certainly is less vulnerable to skewing by stop words,  as words are ranked by importance to each document and the all over corpus. 
             
         
-            The above mentioned methods are distributional representations \cite{practicalNLP}. They all suffer from similar problems. The vectors contain one element for each word in the vocabulary, resulting in vectors which are high-dimensional and very sparse. Also, \ac{TF-IDF} fails to represent the topical relationship between $ d_{1} $ and $ d_{3}$. Finally, these methods can not handle an inference for words which are not in their vocabulary \cite{practicalNLP}.
+            The above mentioned methods are distributional representations \cite[ch.~3.3]{practicalNLP}. They all suffer from similar problems. The vectors contain one element for each word in the vocabulary, resulting in vectors which are high-dimensional and very sparse. Also, \ac{TF-IDF} fails to represent the topical relationship between $ d_{1} $ and $ d_{3}$. Finally, these methods can not handle an inference for words which are not in their vocabulary \cite[ch.~3.2]{practicalNLP}.
             
             Following methods are distributed representations. They are designed to alleviate the drawbacks of distributional word representations.
             
             \subsubsection{Word Embedding BERT}
              The most desirable vector representation consists of dense low-dimensional vectors which are close to each other if the words are considered similar. The lack of understanding of related words, and the problem of high-dimensionality is corrected with the third presented option: word embeddings.
             
-            An embedding is a translation of a word into a high-quality vector. The model does so, as it has been trained on a large set of natural language data. The first model for continuous vector representations was word2vec \cite{word2vec2013}. Being published in 2013, the model has been already replaced by new state-of-the-art models such as \acs{BERT}. This new model builds on the premised of word2vec, but was able to obtain astonishing results at tasks such as answering questions using the Stanford Question Answering Dataset \cite{BERT}. 
+            An embedding is a translation of a word into a high-quality vector. The model does so, as it has been trained on a large set of natural language data. The first model for continuous vector representations was word2vec \cite{word2vec2013}. Being published in 2013, the model has been already replaced by new state-of-the-art models such as \acs{BERT}. This new model builds on the premised of word2vec, but was able to obtain astonishing results at tasks such as answering questions using the Stanford Question Answering Dataset \cite[p.~6]{BERT}. 
             
             The \ac{BERT} model can represent unlabeled text by learning on large textual corpora. Its name is assembled from its different components:
             
@@ -287,12 +287,12 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
              	
              	\centering
              	\includegraphics[height=10cm]{ Bilder/preprocessing/BERT/BERT-language-modeling-masked-lm.png}
-             	\label{fig:mlm}
              	\caption[Training BERT with the MLM task]{Training BERT with the MLM task \cite{alammarIllustratedBERTELMo}}
-             \end{figure}
+         		\label{fig:mlm}    
+         \end{figure}
             
          
-               BERT is trained with millions of wikipedia articles, meaning the inputs is a large text database. The text segment is split into tokens, which are then encoded as a vector of length 768 \cite{BERTEmbeddingLayer}. Next follows the positional encoding. When applying the transformer encoder to a sequence of words, the output should be dependent of the sequence of the input words. E.g. the sentences "Bob is taller than Alice" and "Alice is taller than Bob" should be encoded as two different vectors. This can be realized with encoding the position of each token. 
+               BERT is trained with millions of Wikipedia articles, meaning the inputs is a large text database. The text segment is split into tokens, which are then encoded as a vector of length 768 \cite[p.~3]{BERT}. Next follows the positional encoding. When applying the transformer encoder to a sequence of words, the output should be dependent of the sequence of the input words. E.g. the sentences "Bob is taller than Alice" and "Alice is taller than Bob" should be encoded as two different vectors. This can be realized with encoding the position of each token. 
                
 
                
@@ -300,7 +300,7 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
                
                \begin{enumerate}
                	\item The self-attention mechanism allows for the model to incorporate the context of a token into its encoding. The mechanism does so by calculating the importance of inputs with themselves ("self") and returns which tokens are important to each other's meaning ("attention").
-               	\item To reduce the computational requirements for training a deep neural network, the layers of neurons in the networks are normalized with respect to their activation. This reduced the training time while not impacting the result, which is only dependent on the learning algorithm \cite{baLayerNormalization2016}.
+               	\item To reduce the computational requirements for training a deep neural network, the layers of neurons in the networks are normalized with respect to their activation. This reduced the training time while not impacting the result, which is only dependent on the learning algorithm \cite[p.~10]{baLayerNormalization2016}.
                	\item The \ac{FFNN} takes the results of the layer normalization and the residual connection as input. When the whole transformer is trained on a specific task, the parameters (weights) of this model are also trained. Therefore, the \ac{FFNN} is one gear in the whole process of reaching the transformer's task.
                	\item Finally, the results are normalized again.
                \end{enumerate}
@@ -325,26 +325,26 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
 			Second, BERT is only in one language.
 			
 			Luckily, researchers around BERT encountered similar tasks and developed a new BERT model to solve this. 
-			First, the Sentence-BERT embeddings are generated in a way that requires only minimal additions to the BERT architecture \cite{sentenceBERT}. Sentence-BERT is trained with a dataset of sentences, labeled with their relationship (contradiction, entailment, neutral) \cite{sentenceBERT}. Two sentences each pass through a BERT model. A pooling layer for each of the two calculates a weighted sum of all words in the sentence to create the embedding for the whole sentences. With the labels and the comparison of two sentence embeddings, the pooling layer is trained. The weights in both pooling layers are adjusted over time, creating a so-called Siamese Network.
+			First, the Sentence-BERT embeddings are generated in a way that requires only minimal additions to the BERT architecture \cite[p.~2]{sentenceBERT}. Sentence-BERT is trained with a dataset of sentences, labeled with their relationship (contradiction, entailment, neutral) \cite[p.~4]{sentenceBERT}. Two sentences each pass through a BERT model. A pooling layer for each of the two calculates a weighted sum of all words in the sentence to create the embedding for the whole sentences. With the labels and the comparison of two sentence embeddings, the pooling layer is trained. The weights in both pooling layers are adjusted over time, creating a so-called Siamese Network.
 			
-			Secondly, the embeddings need to be able to understand different languages. A multilingual implementation of BERT can solve this. A multilingual embedding should align vectors in different languages in such a way, that translated sentences are very close in the vector space. A multilingual Sentence-BERT model trains on a dataset with sentences and their translation \cite{mBERT}. The weights in the BERT model are adjusted by completing the task of assigning the same sentence in different languages a similar vector \cite{mBERT}.
+			Secondly, the embeddings need to be able to understand different languages. A multilingual implementation of BERT can solve this. A multilingual embedding should align vectors in different languages in such a way, that translated sentences are very close in the vector space. A multilingual Sentence-BERT model trains on a dataset with sentences and their translation \cite[p.~2]{mBERT}. The weights in the BERT model are adjusted by completing the task of assigning the same sentence in different languages a similar vector \cite[p.~2]{mBERT}.
 			
 			Both the multilingual and sentence embeddings require very little additional complexity compared to the underlying BERT model. But, these additions help to accurately represent the content in the dataset.
 			
             \subsection{Theoretical Implementation}
             
-           	After explaining and evaluating the alternatives, the most favorable one, the word embeddings using \ac{BERT} will be put into practice. In theory, a BERT model would have to be trained using a large text dataset. This took the developers of BERT at Google 4 whole days, and required 4 \ac{TPU}s \cite{BERTTraining}. Fortunately, the researchers published this trained model, making it free to use for the public \cite{BERT}.
+           	After explaining and evaluating the alternatives, the most favorable one, the word embeddings using \ac{BERT} will be put into practice. In theory, a BERT model would have to be trained using a large text dataset. This took the developers of BERT at Google 4 whole days, and required 4 \ac{TPU}s \cite{BERTTraining}. Fortunately, the researchers published this trained model, making it free to use for the public \cite[p.~2]{BERT}.
             	
             From the available pre-trained models, the \lstinline|distiluse-base-multilingual-cased| model fulfills all the requirements (sentence embeddings, multilingual vector alignment). The prefix 'distiluse' stands for distilled universal sentence encoder, meaning the sentence encoder is compressed in a model with a more portable size. The suffix 'cased' means that words are handled case-sensitive.
             
-            Since the description data has already been transformed into a usable format and cleaned, these descriptions can now easily be fed into the \lstinline|distiluse-base-multilingual-cased| model.
+            Since the description data has already been transformed into a usable format and cleaned, the descriptions can now easily be fed into the \lstinline|distiluse-base-multilingual-cased| model.
             	
             \subsection{Practical Implementation}
              
              The model can be laded using the library \lstinline|sentence_transformers|. The library can create a model from the name of the transformer. Embeddings can be generated very easily, and are returned as a 2D-array. This inference takes about 30ms. For all 79.741 documents, this means an total time of about 40 minutes.
              
 \begin{lstlisting}[language=python,
-	label=code:process-pool,
+	label=code:generate-embed,
 	caption=Generating an Embedding with BERT,
 	style=EigenerPythonStyle]   
 
